Fixed formatting style

--- a/UI/htdocs/static/css/base.css
+++ b/UI/htdocs/static/css/base.css
@@ -17,7 +17,7 @@ html, body {
 	font-family: Futura, "Century Gothic", AppleGothic, sans-serif, Lucida Sans,Lucida Grande,Calibri, Arial, Verdana, Colab, moderna !important;
 	}
 	
-#headerArea #navBar {
+#headerArea #navigationBar {
     font-family:Arial,Verdana;
     position:fixed; 
     top:0px;
