--- a/UI/htdocs/templates/navigationBar.html
+++ b/UI/htdocs/templates/navigationBar.html
@@ -1,5 +1,17 @@
 $def with (page)
 <div id="navigationBar">
-test
-
+    <ul>
+        <li>
+            <a href="/">Overview</a>
+        </li>
+        <li>
+            <a href="/debug">Debug</a>
+        </li>
+        <li>
+            <a href="/instructions">Instructions</a>
+        </li>
+        <li>
+            <a href="/health">Health</a>
+        </li>
+    </ul>
 <div>
