--- a/UI/htdocs/templates/navigationBar.html
+++ b/UI/htdocs/templates/navigationBar.html
@@ -1,17 +1,28 @@
 $def with (page)
 <div id="navigationBar">
-    <ul>
-        <li>
-            <a href="/">Overview</a>
-        </li>
-        <li>
-            <a href="/debug">Debug</a>
-        </li>
-        <li>
-            <a href="/instructions">Instructions</a>
-        </li>
-        <li>
-            <a href="/health">Health</a>
-        </li>
-    </ul>
+    <table>
+        <tr>
+            <td>
+                <h1>UBC Sailbot</h1>
+            </td>
+            <td>    
+                <div id="navigationLinks">
+                </div>
+                <ul>
+                    <li>
+                        <a href="/">Overview</a>
+                    </li>
+                    <li>
+                        <a href="/debug">Debug</a>
+                    </li>
+                    <li>
+                        <a href="/instructions">Instructions</a>
+                    </li>
+                    <li>
+                        <a href="/health">Health</a>
+                    </li>
+                </ul>
+            </td>
+        </tr>
+    </table>
 <div>
