--- a/UI/htdocs/templates/base.html
+++ b/UI/htdocs/templates/base.html
@@ -10,6 +10,10 @@ $# It is designed to handle all changes via sub-templates or python call to a Pa
 	</head>
 	<body> 
 	    $:page.navigationBar
+	    <!-- START contentPane -->
+        <div id="contentPane">
 	    $:page.contentPane
+	    </div>
+	    <!-- END contentPane -->
 	</body>
 </html>
