--- a/UI/htdocs/templates/overview.html
+++ b/UI/htdocs/templates/overview.html
@@ -1,28 +1,26 @@
 $def with (page)
-<!-- START contentPane -->
-<div id="contentPane">
-    <!-- START leftColumn -->
-    <div id="leftColumn">
-        <div class="widget squareLayout">
-            <iframe width="100%" height="auto" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.ca/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=vancouver+harbour&amp;aq=&amp;sll=54.112352,-126.555646&amp;sspn=20.725528,57.084961&amp;ie=UTF8&amp;hq=harbour&amp;hnear=Vancouver,+Greater+Vancouver+Regional+District,+British+Columbia&amp;t=m&amp;fll=49.277521,-123.14013&amp;fspn=0.022426,0.055747&amp;st=109146043351405611748&amp;rq=1&amp;ev=zi&amp;split=1&amp;ll=49.277213,-123.126526&amp;spn=0.009799,0.018239&amp;z=15&amp;output=embed"></iframe><br /><small><a href="https://maps.google.ca/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=vancouver+harbour&amp;aq=&amp;sll=54.112352,-126.555646&amp;sspn=20.725528,57.084961&amp;ie=UTF8&amp;hq=harbour&amp;hnear=Vancouver,+Greater+Vancouver+Regional+District,+British+Columbia&amp;t=m&amp;fll=49.277521,-123.14013&amp;fspn=0.022426,0.055747&amp;st=109146043351405611748&amp;rq=1&amp;ev=zi&amp;split=1&amp;ll=49.277213,-123.126526&amp;spn=0.009799,0.018239&amp;z=15" style="color:#0000FF;text-align:left">View Larger Map</a></small>
-        </div>
-        
-        <div class="widget squareLayout">
-        test to see how this works
-        </div>
+
+<!-- START leftColumn -->
+<div id="leftColumn">
+    <div class="widget">
+        <iframe width="100%" height="auto" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.ca/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=vancouver+harbour&amp;aq=&amp;sll=54.112352,-126.555646&amp;sspn=20.725528,57.084961&amp;ie=UTF8&amp;hq=harbour&amp;hnear=Vancouver,+Greater+Vancouver+Regional+District,+British+Columbia&amp;t=m&amp;fll=49.277521,-123.14013&amp;fspn=0.022426,0.055747&amp;st=109146043351405611748&amp;rq=1&amp;ev=zi&amp;split=1&amp;ll=49.277213,-123.126526&amp;spn=0.009799,0.018239&amp;z=15&amp;output=embed"></iframe><br /><small><a href="https://maps.google.ca/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=vancouver+harbour&amp;aq=&amp;sll=54.112352,-126.555646&amp;sspn=20.725528,57.084961&amp;ie=UTF8&amp;hq=harbour&amp;hnear=Vancouver,+Greater+Vancouver+Regional+District,+British+Columbia&amp;t=m&amp;fll=49.277521,-123.14013&amp;fspn=0.022426,0.055747&amp;st=109146043351405611748&amp;rq=1&amp;ev=zi&amp;split=1&amp;ll=49.277213,-123.126526&amp;spn=0.009799,0.018239&amp;z=15" style="color:#0000FF;text-align:left">View Larger Map</a></small>
     </div>
-    <!-- END leftColumn -->
     
-    <!-- START rightColumn -->
-    <div id="rightColumn">
-        <div class="widget squareLayout">
-            more testing
-        </div>
-        
-        <div class="widget squareLayout">
-            just to make sure that this is formatted correctly
-        </div>
+    <div class="widget">
+    test to see how this works
     </div>
-    <!-- END rightColumn -->
 </div>
-<!-- END contentPane -->
+<!-- END leftColumn -->
+
+<!-- START rightColumn -->
+<div id="rightColumn">
+    <div class="widget">
+        more testing
+    </div>
+    
+    <div class="widget">
+        just to make sure that this is formatted correctly
+    </div>
+</div>
+<!-- END rightColumn -->
+
