fixed naming conventions

--- a/UI/htdocs/templates/overview.html
+++ b/UI/htdocs/templates/overview.html
@@ -3,7 +3,7 @@ $def with (page)
 <!-- START leftColumn -->
 <div id="leftColumn">
     <div class="widget">
-        $:page.mapPane
+        $:page.mapWidget
     </div>
     
     <div class="widget">
