Added jcanvas and basic drawing for the compass widget

--- a/UI/htdocs/templates/overview.html
+++ b/UI/htdocs/templates/overview.html
@@ -7,7 +7,7 @@ $def with (page)
     </div>
     
     <div class="widget">
-    test to see how this works
+        $:page.compassWidget
     </div>
 </div>
 <!-- END leftColumn -->
