--- a/UI/htdocs/templates/mapWidget.html
+++ b/UI/htdocs/templates/mapWidget.html
@@ -1,5 +1,7 @@
 $def with (page)
-
-<div class="widget">
-
-</div>
+<!-- body.onload is called once the page is loaded (call the 'init' function) -->
+    
+    <!-- define a DIV into which the map will appear. Make it take up the whole window -->
+    <div style="width:100%; height:350px" id="map"></div>
+   
+ 
