--- a/UI/htdocs/static/css/base.css
+++ b/UI/htdocs/static/css/base.css
@@ -16,22 +16,23 @@ html, body {
     text-align:left;
     font-family:Arial,Verdana;
     position:fixed; 
+    font-size:1.0em;
     top:0px;
     left:0px;
     width:100%;
-    height:60px;
+    height:40px;
     z-index:100;
     color:white;
     background-color:#0072c6;
-    padding:10px;
+    padding:0px 10px 10px 10px;
     margin:0px;
 }
 
 #navigationBar h1 {
     color:white;
-    margin:10px;
+    margin:5px;
     font-family:Futura; 
-    font-size:2.0em; 
+    font-size:1.6em; 
     display:inline;
 }
 
@@ -63,9 +64,8 @@ html, body {
     display:block;
     width:100%;
     height:100%;
-    padding:20px;
+    padding:15px;
     color:white;
-    font-size:1.5em;
     text-decoration:none;
 }
 
@@ -73,7 +73,7 @@ html, body {
     position:relative;
     margin:0px auto;
     left:0px;
-    top:60px;
+    top:80px;
     text-align:center;
     color:#0072c6;
     padding:0px;
