Fixed z-index of navigation bar

--- a/UI/htdocs/templates/overview.html
+++ b/UI/htdocs/templates/overview.html
@@ -16,11 +16,11 @@ $def with (page)
 <!-- START rightColumn -->
 <div id="rightColumn">
     <div class="widget">
-        more testing
+        
     </div>
     
     <div class="widget">
-        just to make sure that this is formatted correctly
+        just to make sure that this is formatted cor
     </div>
 </div>
 <!-- END rightColumn -->
