--- a/UI/htdocs/templates/overview.html
+++ b/UI/htdocs/templates/overview.html
@@ -15,12 +15,52 @@ $def with (page)
 
 <!-- START rightColumn -->
 <div id="rightColumn">
-    <div class="widget">
-        
+    <div class="widget dataDisplayTable">
+        <h1>Connection Status</h1>
+        <dl>
+            <dt>Online/Offline</dt>
+            <dd>Full</dd>
+            
+            <dt>Battery Level</dt>
+            <dd>14:02:23</dd>
+            
+            <dt>GPS # of Satellites</dt>
+            <dd>23</dd>
+            
+            <dt>GPS Accuracy</dt>
+            <dd>+/- 2m</dd>
+            
+            <dt>Hardware Health</dt>
+            <dd>Good/Poor</dd>
+        </dl>
     </div>
     
-    <div class="widget">
-        just to make sure that this is formatted cor
+    <div class="widget dataDisplayTable">
+        <h1>Telemetry</h1>
+        <dl>
+            <dt>Speed Over Ground</dt>
+            <dd>14 m/s</dd>
+            
+            <dt>Wind Direction</dt>
+            <dd>North-East - 10 degrees</dd>
+            
+            <dt>Current Maneuver</dt>
+            <dd>Tacking</dd>
+        </dl>
+    </div>
+    
+    <div class="widget dataDisplayTable">
+        <h1>Current Process</h1>
+        <dl>
+            <dt>Task</dt>
+            <dd>Current Task Name</dd>
+            
+            <dt>Time Remaining</dt>
+            <dd>14:02:23</dd>
+            
+            <dt>Time to Completion</dt>
+            <dd>16:04:33</dd>
+        </dl>
     </div>
 </div>
 <!-- END rightColumn -->
