--- a/UI/htdocs/templates/instructions.html
+++ b/UI/htdocs/templates/instructions.html
@@ -1,2 +1,46 @@
 $def with (page)
 
+<!-- START leftColumn -->
+<div id="leftColumn">
+
+
+</div>
+<!-- END leftColumn -->
+
+<!-- START rightColumn -->
+<div id="rightColumn">
+    <div class="widget dataDisplayTable">
+        <h1>Challenge</h1>
+        <dl>
+            <dt>Currently Running</dt>
+            <dd>Point-to-Point</dd>
+        </dl>
+    </div>
+    
+    <div class="widget dataDisplayTable">
+        <h1>Waypoints</h1>
+        <dl>
+            <dt>Indicator</dt>
+            <dd>lat/long/waypointtype</dd>
+            
+            <dt>Indicator</dt>
+            <dd>lat/long/waypointtype</dd>
+
+            <dt>Indicator</dt>
+            <dd>lat/long/waypointtype</dd>
+            
+            <dt>Indicator</dt>
+            <dd>lat/long/waypointtype</dd>
+        </dl>
+    </div>
+    
+    <div class="widget dataDisplayTable">
+        <h1>Boundaries</h1>
+        <dl>
+            <dt>Indicator</dt>
+            <dd>lat/long/radius/in-out</dd>
+        </dl>
+    </div>
+</div>
+<!-- END rightColumn -->
+
