--- a/UI/htdocs/static/css/base.css
+++ b/UI/htdocs/static/css/base.css
@@ -5,6 +5,9 @@
 html, body {
 	width:100%;
 	height:100%;
+	background-image:url('../img/Thunderbird-2012-Opaque.jpg');
+	background-size:100% 100%;
+	background-color:white;
 	padding:0px;
 	text-align:center;
 	margin:0px;
