Added API handling for overview table data, made overview table data a widget and fixed critical bug in PageControl class

--- a/UI/htdocs/templates/instructions.html
+++ b/UI/htdocs/templates/instructions.html
@@ -9,7 +9,7 @@ $def with (page)
 
 <!-- START rightColumn -->
 <div id="rightColumn">
-    <div class="widget dataDisplayTable">
+    <div class="widget dataDisplayTableWidget">
         <h1>Challenge</h1>
         <dl>
             <dt>Currently Running</dt>
@@ -17,7 +17,7 @@ $def with (page)
         </dl>
     </div>
     
-    <div class="widget dataDisplayTable">
+    <div class="widget dataDisplayTableWidget">
         <h1>Waypoints</h1>
         <dl>
             <dt>Indicator</dt>
@@ -34,7 +34,7 @@ $def with (page)
         </dl>
     </div>
     
-    <div class="widget dataDisplayTable">
+    <div class="widget dataDisplayTableWidget">
         <h1>Boundaries</h1>
         <dl>
             <dt>Indicator</dt>
