--- a/UI/htdocs/templates/overview.html
+++ b/UI/htdocs/templates/overview.html
@@ -15,7 +15,7 @@ $def with (page)
 
 <!-- START rightColumn -->
 <div id="rightColumn">
-    <div class="widget dataDisplayTable">
+    <div class="widget dataDisplayTableWidget">
         <h1>Connection Status</h1>
         <dl>
             <dt>Online/Offline</dt>
@@ -35,7 +35,7 @@ $def with (page)
         </dl>
     </div>
     
-    <div class="widget dataDisplayTable">
+    <div class="widget dataDisplayTableWidget">
         <h1>Telemetry</h1>
         <dl>
             <dt>Speed Over Ground</dt>
@@ -49,7 +49,7 @@ $def with (page)
         </dl>
     </div>
     
-    <div class="widget dataDisplayTable">
+    <div class="widget dataDisplayTableWidget">
         <h1>Current Process</h1>
         <dl>
             <dt>Task</dt>
