Created OverviewData.js and modified overview.html to write the values received in json

--- a/UI/htdocs/templates/overview.html
+++ b/UI/htdocs/templates/overview.html
@@ -19,19 +19,19 @@ $def with (page)
         <h1>Connection Status</h1>
         <dl>
             <dt>Online/Offline</dt>
-            <dd>Full</dd>
+            <dd id="connectionStatus-onlineOfflineCell"></dd>
             
             <dt>Battery Level</dt>
-            <dd>14:02:23</dd>
+            <dd id="connectionStatus-batteryLevelCell"></dd>
             
             <dt>GPS # of Satellites</dt>
-            <dd>23</dd>
+            <dd id="connectionStatus-satNumCell"></dd>
             
             <dt>GPS Accuracy</dt>
-            <dd>+/- 2m</dd>
+            <dd id="connectionStatus-gpsAccuracyCell"></dd>
             
             <dt>Hardware Health</dt>
-            <dd>Good/Poor</dd>
+            <dd id="connectionStatus-hardwareHealthCell"></dd>
         </dl>
     </div>
     
@@ -39,13 +39,13 @@ $def with (page)
         <h1>Telemetry</h1>
         <dl>
             <dt>Speed Over Ground</dt>
-            <dd>14 m/s</dd>
+            <dd id="telemetry-speedOverGroundCell"></dd>
             
             <dt>Wind Direction</dt>
-            <dd>North-East - 10 degrees</dd>
+            <dd id="telemetry-windDirectionCell"></dd>
             
             <dt>Current Maneuver</dt>
-            <dd>Tacking</dd>
+            <dd id="telemetry-currentManeuverCell"></dd>
         </dl>
     </div>
     
@@ -53,13 +53,13 @@ $def with (page)
         <h1>Current Process</h1>
         <dl>
             <dt>Task</dt>
-            <dd>Current Task Name</dd>
+            <dd id="currentProcess-currentTaskCell"></dd>
             
             <dt>Time Remaining</dt>
-            <dd>14:02:23</dd>
+            <dd id="currentProcess-timeRemainingCell"></dd>
             
             <dt>Time to Completion</dt>
-            <dd>16:04:33</dd>
+            <dd id="currentProcess-timeToCompletionCell"></dd>
         </dl>
     </div>
 </div>
