--- a/UI/htdocs/templates/instructions.html
+++ b/UI/htdocs/templates/instructions.html
@@ -13,7 +13,7 @@ $def with (page)
         <h1>Challenge</h1>
         <dl>
             <dt>Currently Running</dt>
-            <dd>Point-to-Point</dd>
+            <dd id="pointToPoint">Point-to-Point</dd>
         </dl>
     </div>
     
