Made Send Data Button #113

--- a/ui/templates/instructions.html
+++ b/ui/templates/instructions.html
@@ -41,6 +41,9 @@ $def with (page)
             <dd>lat/long/radius/in-out</dd>
         </dl>
     </div>
+    <FORM>
+    <INPUT type="button" value = "Send" name = "button1" onClick="senddata()">
+    </FORM>
 </div>
 <!-- END rightColumn -->
 
