Added latitude and longitude cells to the overview page and populated the fields with dummy values writen in api.py

--- a/ui/templates/overview.html
+++ b/ui/templates/overview.html
@@ -46,6 +46,12 @@ $def with (page)
             
             <dt>Current Maneuver</dt>
             <dd id="telemetry-currentManeuverCell"></dd>
+            
+            <dt>Latitude</dt>
+            <dd id="telemetry-latitudeCell"></dd>
+            
+            <dt>Longitude</dt>
+            <dd id="telemetry-longitudeCell"></dd>
         </dl>
     </div>
     
