added the map widget to the instructions page

--- a/ui/templates/instructions.html
+++ b/ui/templates/instructions.html
@@ -2,7 +2,9 @@ $def with (page)
 
 <!-- START leftColumn -->
 <div id="leftColumn">
-
+<div class="widget">
+        $:page.mapWidget
+    </div>
 
 </div>
 <!-- END leftColumn -->
