attempt to submit the modified instructions.html file for revision

--- a/ui/templates/instructions.html
+++ b/ui/templates/instructions.html
@@ -1,7 +1,14 @@
 $def with (page)
 
 <!-- START leftColumn -->
+
 <div id="leftColumn">
+	<FORM>
+	<INPUT type="button" value = "Create Waypoint" name = "button_wp">
+	
+	<INPUT type="button" value = "Create Boundary" name = "button_b">
+	</FORM>
+	
 <div class="widget">
         $:page.mapWidget
     </div>
