fixed rotation of sail relative to boat

--- a/ui/templates/compassWidget.html
+++ b/ui/templates/compassWidget.html
@@ -5,7 +5,7 @@ $def with (page)
 		<!-- KinetJS builds canvasses inside a single div. This is problematic in terms of layout for our two columns
 			A way to fix this is to move the div to the left by half of its width
 		-->
-			<div id="compassCanvas" style="position:relative;top:0px;left:-250px"></div>
+			<div id="compassCanvas" style="position:relative;top:0px;left:-250px;"></div>
 	</center>
 </div>
 
