updated debug page with formatting and position log

--- a/ui/templates/debug.html
+++ b/ui/templates/debug.html
@@ -1,5 +1,22 @@
 $def with (page)
 
-<div id="console">
+<!-- START leftColumn -->
+<div id="leftColumn">
+
+    <div class="widget dataDisplayTableWidget">
+        <h1>Position Log</h1>
+		<div id="positionLogConsole" style="border:1px solid black; padding:10px;color:black;font-family:'Courier New'; height:300px; overflow:scroll;"></div>
     </div>
+
+</div>
+<!-- END leftColumn -->
+
+<!-- START rightColumn -->
+<div id="rightColumn">
+    <div class="widget dataDisplayTableWidget">
+        <h1>Log Messages</h1>
+		<div id="debugLogConsole" style="border:1px solid black; padding:10px;color:black;font-family:'Courier New'; height:300px; overflow:scroll;"></div>
+    </div>
+</div>
+<!-- END rightColumn -->
 
