added the update boundaries function

--- a/ui/templates/instructions.html
+++ b/ui/templates/instructions.html
@@ -5,7 +5,7 @@ $def with (page)
 <div id="leftColumn">
 	<FORM>
 	<INPUT type="button" value = "Create Waypoint" name = "button_wp" onClick ="addWaypoint()">
-	<INPUT type="button" value = "Create Boundary" name = "button_bd">
+	<INPUT type="button" value = "Create Boundary" name = "button_bd" onClick ="addBoundary()">
 	</FORM>
 <div class="widget">
         $:page.mapWidget
