--- a/ui/templates/instructions.html
+++ b/ui/templates/instructions.html
@@ -30,11 +30,11 @@ $def with (page)
     <div class="widget dataDisplayTableWidget">
         <h1>Waypoints</h1>
         <dl>
-            <dt>Wpt1</dt>
-            <form>
-            	lat:<input type="text" name="wpt1_lat" size="8">
-            	lon:<input type="text" name="wpt1_lon" size="8">
-            	type:<select id="waypointtype">
+            <wptName>Wpt 1</wptName>
+            <form name= "wpt1">
+            	lat:<input type="text" id="lat1" size="8">
+            	lon:<input type="text" id="lon1" size="8">
+            	type:<select id="waypointtype1">
             			<option value="pointToPoint">Point to Point</option>
             			<option value="roundBuoy">Round Buoy</option>
             			<option value="ld_start_finish">ld Start Finish</option>
@@ -50,10 +50,10 @@ $def with (page)
             	
             </form>
             
-            <dt>Wpt2</dt>
-             <form>
-            	lat:<input type="text" name="wpt1_lat" size="8">
-            	lon:<input type="text" name="wpt1_lon" size="8">
+            <wptName>Wpt 2</wptName>
+             <form name= "wpt2">
+            	lat:<input type="text" id="lat2" size="8">
+            	lon:<input type="text" id="lon2" size="8">
             	type:<select id="waypointtype2">
             			<option value="pointToPoint">Point to Point</option>
             			<option value="roundBuoy">Round Buoy</option>
@@ -70,10 +70,10 @@ $def with (page)
             	
             </form>
 
-            <dt>Wpt3</dt>
-             <form>
-            	lat:<input type="text" name="wpt1_lat" size="8">
-            	lon:<input type="text" name="wpt1_lon" size="8">
+            <wptName>Wpt 3</wptName>
+             <form name= "wpt3">
+            	lat:<input type="text" id="lat3" size="8">
+            	lon:<input type="text" id="lon3" size="8">
             	type:<select id="waypointtype3">
             			<option value="pointToPoint">Point to Point</option>
             			<option value="roundBuoy">Round Buoy</option>
@@ -90,10 +90,10 @@ $def with (page)
             	
             </form>
             
-            <dt>Wpt4</dt>
-           <form>
-            	lat:<input type="text" name="wpt1_lat" size="8">
-            	lon:<input type="text" name="wpt1_lon" size="8">
+            <wptName>Wpt 4</wptName>
+           <form name= "wpt4">
+            	lat:<input type="text" id="lat4" size="8">
+            	lon:<input type="text" id="lon4" size="8">
             	type:<select id="waypointtype4">
             			<option value="pointToPoint">Point to Point</option>
             			<option value="roundBuoy">Round Buoy</option>
